<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="mine_item_accessories">Accessories</string>
    <string name="mine_item_decorations">Decorations</string>
    <string name="mine_item_historys">Historys</string>
    <string name="mine_item_settings">Settings</string>
    <string name="mine_item_invite">Invite</string>

    <string name="id_has_copied">ID has been copied to the clipboard</string>

</resources>